# burocrata

./: .flake8  .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE.txt  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: pypi.yml  style.yml  test.yml
burocrata/: __init__.py  cli.py
env/: requirements-style.txt
src/burocrata/: cli.py
