[project]
name = "burocrata"
description = "Check and insert copyright and license notices into source code files"
dynamic = ["version"]
authors = [
  {name="The Burocrata Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leo@uieda.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["license", "development", "copyright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0,<9.0.0",
    "tomli>=1.1.0,<3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/fatiando/burocrata"
"Changelog" = "https://github.com/fatiando/burocrata/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/fatiando/burocrata/issues"
"Source Code" = "https://github.com/fatiando/burocrata"

[project.scripts]
burocrata = "burocrata.cli:main"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "node-and-date"
write_to =  "burocrata/_version.py"

# Make sure isort and Black are compatible
[tool.isort]
profile = "black"
multi_line_output = 3
