[project]
name = "burocrata"
description = "Check and insert copyright and license notices into source code"
dynamic = ["version"]
authors = [
  {name="The Burocrata Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leo@uieda.com"}
]
readme = "README.md"
license = "MIT"
keywords = ["license", "development", "copyright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0,<9.0.0",
    "tomli>=1.1.0,<3.0.0",
    "pathspec>=0.10.1",
]

[project.urls]
"Homepage" = "https://github.com/fatiando/burocrata"
"Changelog" = "https://github.com/fatiando/burocrata/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/fatiando/burocrata/issues"
"Source Code" = "https://github.com/fatiando/burocrata"

[project.scripts]
burocrata = "burocrata.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "no-local-version"
write_to =  "src/burocrata/_version.py"

[tool.burocrata]
notice = '''
# Copyright (c) 2024 The Burocrata Developers.
# Distributed under the terms of the MIT License.
# SPDX-License-Identifier: MIT
# This code is part of the Fatiando a Terra project (https://www.fatiando.org).'''
exclude = []

[tool.ruff]
line-length = 88
exclude = [
    "doc/_build",
    "src/burocrata/_version.py",
]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "D",        # pydocstyle
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "ISC001",   # Conflicts with formatter
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "RET504",   # Allow variable assignment only for return
  "PT001",    # Conventions for parenthesis on pytest.fixture
  "D200",     # Allow single line docstrings in their own line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # disable unused-imports errors on __init__.py
"test/**" = [
    "T20", # allow print statements in tests
    "D",   # ignore pydocstyle warnings in tests
]
"doc/conf.py" = ["D"]  # ignore pydocstyle warnings in Sphinx config

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = ["burocrata"]
omit = [
    "**/_version.py",
    "**/__init__.py",
]
branch = true
# Needed to combine coverage data from multiple OSs on CI
relative_files = true

[tool.coverage.paths]
source = [
    "src/burocrata",
    "*/burocrata",
    "*\\burocrata",
]

[tool.coverage.report]
show_missing = true
